--- a/styles/sass/helpers/_variables.scss
+++ b/styles/sass/helpers/_variables.scss
@@ -1,7 +1,6 @@
 /*---------------------------
 	Fonts
 ----------------------------*/
-@import url("https://fonts.googleapis.com/css?family=Muli:400,400i,600,700,800&display=swap");
 
 @font-face {
   font-family: 'Futura PT';
@@ -29,6 +28,29 @@
   font-style: normal;
   font-display: swap;
 }
+
+@font-face {
+  font-family: 'Muli';
+  font-style: normal;
+  font-weight: 500;
+  src: local('Muli Regular'), url('../../../fonts/text-font/Muli-Regular.woff') format('woff');
+  }
+  
+  @font-face {
+  font-family: 'Muli';
+  font-style: normal;
+  font-weight: 600;
+  src: local('Muli SemiBold'), url('../../../fonts/text-font/Muli-SemiBold.woff') format('woff');
+  }
+  
+  @font-face {
+  font-family: 'Muli';
+  font-style: normal;
+  font-weight: 700;
+  src: local('Muli Bold'), url('../../../fonts/text-font/Muli-Bold.woff') format('woff');
+  }
+  
+
 
 
 // fonts
