--- a/styles/sass/layout/_hero-slider.scss
+++ b/styles/sass/layout/_hero-slider.scss
@@ -217,7 +217,7 @@
 
 
 	.gradient-overlay {
-		@include linear-gradient-bg(left, $dark-gray 45%, transparent 65%);
+		@include linear-gradient-bg(to right, transparent 65%, $dark-gray 45%);
 		width: 100%;
 		height: 100%;
 		position: absolute;
